v0.2.2
======

* html-report: Report conflictive file when JsonParseException is raised

v0.2.1
======

* Fix bug parsing optional arguments for command 'html-report'